objects/scrubDemo_Interaction_Analysis__c.object
<CustomObject>
    <fields>
        <fullName>Analyzed_Object_ID__c</fullName>
        <label>Analyzed Object ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Analyzed_Object__c</fullName>
        <inlineHelpText>Type of object analyzed for this</inlineHelpText>
        <label>Analyzed Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Interaction Analyses</relationshipLabel>
        <relationshipName>Interaction_Analyses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Prediction_Conf_1__c</fullName>
        <label>Prediction Conf 1</label>
        <precision>16</precision>
        <scale>14</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prediction_Conf_2__c</fullName>
        <label>Prediction Conf 2</label>
        <precision>9</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prediction_Conf_3__c</fullName>
        <label>Prediction Conf 3</label>
        <precision>9</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prediction_Result_1__c</fullName>
        <label>Prediction Result 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prediction_Result_2__c</fullName>
        <label>Prediction Result 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prediction_Result_3__c</fullName>
        <label>Prediction Result 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prediction_Value__c</fullName>
        <formula>IF( Prediction_Result_1__c = &quot;positive&quot;,  Prediction_Conf_1__c , 
     IF( Prediction_Result_1__c = &quot;negative&quot;, -1* Prediction_Conf_1__c , 
          IF(Prediction_Result_2__c = &quot;positive&quot;, Prediction_Conf_2__c, -1*Prediction_Conf_2__c)
     )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prediction Value</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <label>Interaction Analysis</label>
    <nameField>
        <displayFormat>IA-{00000}</displayFormat>
        <label>Interaction Analysis Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interaction Analyses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>